# ai-qa

./: .gitignore  AGENTS.md  Makefile  README.md  pyproject.toml
.claude/: settings.json
.codex/: config.toml  hooks.json
.hooks/: block_dependency_folder_edits.sh  block_git_origin_push.sh  block_global_package_install.sh  block_global_system_commands.sh  block_pipe_to_shell.sh  pre_tool_use_common.sh
.husky/: validate-commit.cjs
.husky/docs/: commit-message-guide.md
.skills/sample/: SKILL.md
devauto/: __init__.py  cli.py
devauto/api/: __init__.py  main.py
devauto/core/: __init__.py  config.py  db.py  doctor.py  models.py  network.py  policy.py  project_config.py  state_machine.py
devauto/runner/: __init__.py  ai_cli.py  artifacts.py  context.py  gates.py  pipeline.py  publisher.py  reviewer.py  subprocesses.py  worker.py  workspace.py
docs/: report.md  spec.md
docs/plan/: 01-product-overview.md  02-local-version.md  03-cloud-version.md  04-validation-and-security.md  05-roadmap.md  README.md
docs/research/: 00-verification-summary.md  01-purpose-and-market-positioning.md  02-agentic-coding-architecture.md  03-pr-validation-and-security.md  04-cloud-evolution-architecture.md  README.md
projects/: example-project.yaml
tests/: __init__.py  test_ai_cli.py  test_api.py  test_artifacts.py  test_cli.py  test_config.py  test_context.py  test_db.py  test_doctor.py  test_gates.py  test_packaging.py  test_pipeline.py  test_policy.py  test_project_config.py  test_publisher.py  test_state_machine.py  test_subprocesses.py  test_worker.py  test_workspace.py
